# gamedig-cli

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: error.rs  key.rs  main.rs
