[package]
name = "gamedig-cli"
authors = ["cainthebest"]
description = "A command line interface for gamedig"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
gamedig = "0.2.1"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.39"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = true
